--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         <div id="app"></div>
         <script src="js/icoAndStyle.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
